facebook like button 21Oct 7.05PM

--- a/Cancelled_Trains/templates/Cancelled_Trains/cancelledTrains.html
+++ b/Cancelled_Trains/templates/Cancelled_Trains/cancelledTrains.html
@@ -13,7 +13,7 @@
 
         .table {
             border-collapse: collapse;
-            width: 80%;
+            width: 100%;
         }
 
         th, td {
@@ -21,8 +21,9 @@
         }
     </style>
 
+
+<div class="col-xs-18 col-sm-12">
 {% include 'userpanal/Detail.html' %}
-<div class="container">
 
 <table class="table table-sm table-bordered " style="height:20px;font-size:12px">
 
