--- a/Live_Train_Status/templates/Live_Train_Status/liveTrainStatus.html
+++ b/Live_Train_Status/templates/Live_Train_Status/liveTrainStatus.html
@@ -26,7 +26,7 @@
         align:"left";
         border: 1px solid black;
         height: 8px;
-        width: 80%;
+        width: 100%;
         text-align: left;
         border-collapse: collapse;
         font-size: 10px;
@@ -34,43 +34,32 @@
     .background-color-yellow { background-color: palegreen; }
     </style>
 
+<div class="col-xs-18 col-sm-12">
     {% include 'userpanal/Detail.html' %}
 
 
-
-    <div class="col-xs-9 col-md-9">
-
-      		<div class="col-sm-10 form-group">
-                <p align="center"><font size="5">Live Train Status</font></p>
-            </div>
-            <div class="container-fluid  img-responsive">
-                <div class="row">
-                    <div class="col-xs-9 col-md-9">
-                        <form id="livetrainstatus">
-                            {% csrf_token %}
-                            <div class="form-group">
-                                <div class="input-group form-group">
-                                    <span class="input-group-btn">
-                                        <button class="btn btn-primary  center-block " type="button" ><strong>Train Number</strong></button>
-                                    </span>
-                                    <input class="form-control dd_user_input"  id="trainNumber" type="text" placeholder="Enter Train Number">
-                                    <span class="input-group-btn">
-                                        <button type = "submit" class = "btn btn-info">Submit</button>
-                                    </span>
-                                </div>
-                            </div>
-                        </form>
-
-                    </div>
-
-                </div>
-
-            </div>
-
-
+    <div class="row">
+        <p align="center"><font size="5">Live Train Status</font></p>
     </div>
-    <div id="live_train_status_html"></div>
 
+    <div class="row">
+        <form id="livetrainstatus">
+            {% csrf_token %}
+            <div class="form-group">
+                <div class="input-group form-group">
+                    <span class="input-group-btn">
+                        <button class="btn btn-primary  center-block " type="button" ><strong>Train Number</strong></button>
+                    </span>
+                    <input class="form-control dd_user_input"  id="trainNumber" type="text" placeholder="Enter Train Number">
+                    <span class="input-group-btn">
+                        <button type = "submit" class = "btn btn-info">Submit</button>
+                    </span>
+                </div>
+            </div>
+        </form>
+        <div id="live_train_status_html"></div>
+    </div>
+</div>
 
 
 <script src="{% static 'Live_Train_Status/js/liveTrainStatus.js' %}"></script>
