--- a/userpanal/templates/userpanal/base.html
+++ b/userpanal/templates/userpanal/base.html
@@ -69,7 +69,7 @@
               <div class="fb-like" data-href="http://www.trainstatusonline.in/" data-layout="button_count" data-action="like" data-size="small" data-show-faces="false" data-share="true"></div>
               <hr>
 			  <div class="list-group">
-				<a href="#" class="list-group-item active">Link</a>
+				<!--<a href="#" class="list-group-item active">Link</a>
 				<a href="#" class="list-group-item">Link</a>
 				<a href="#" class="list-group-item">Link</a>
 				<a href="#" class="list-group-item">Link</a>
@@ -78,7 +78,7 @@
 				<a href="#" class="list-group-item">Link</a>
 				<a href="#" class="list-group-item">Link</a>
 				<a href="#" class="list-group-item">Link</a>
-				<a href="#" class="list-group-item">Link</a>
+				<a href="#" class="list-group-item">Link</a>-->
 			  </div>
 		</div><!--/span-->
 	</div><!--/row-->
@@ -102,7 +102,7 @@
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
 
-    
+
 
 
 <script src="{% static 'userpanal/js/DisableRightClick.js' %}"></script>
