calender change, recent pnr search 27Oct 11.09AM

--- a/Train_Between_Stations/templates/Train_Between_Stations/trainBetweenStations.html
+++ b/Train_Between_Stations/templates/Train_Between_Stations/trainBetweenStations.html
@@ -38,7 +38,7 @@ table#myTable,#myTable2 {
               <input type="text" class="form-control dd_user_input " id="dest" name="Destination_station_code" placeholder="Destination Station" >
             </div>
             <div class="col-xs-4 col-sm-3 form-group">
-              <input type="date" class="form-control dd_user_input " id="date" name="date" placeholder="DD-MM-YYYY" >
+              <input type="text" class="form-control dd_user_input " id="date" name="date" placeholder="dd-mm-yyyy" >
             </div>
 
             <div class="col-xs-2 col-sm-1 form-group">
@@ -55,22 +55,10 @@ table#myTable,#myTable2 {
 </div>
 
 
-<!-- Include Date Range Picker -->
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/js/bootstrap-datepicker.min.js"></script>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/css/bootstrap-datepicker3.css"/>
 
-<script>
-    $(document).ready(function(){
-        var date_input=$('input[name="date"]'); //our date input has the name "date"
-        var container=$('.bootstrap-iso form').length>0 ? $('.bootstrap-iso form').parent() : "body";
-        date_input.datepicker({
-            format: 'dd-mm-yyyy',
-            container: container,
-            todayHighlight: true,
-            autoclose: true,
-        })
-    })
-</script>
+
+
+
 
 <script src="{% static 'Train_Between_Stations/js/trainBetweenStations.js' %}"></script>
 
