--- a/Seat_Availability/templates/Seat_Availability/seatAvailability.html
+++ b/Seat_Availability/templates/Seat_Availability/seatAvailability.html
@@ -37,7 +37,7 @@ table#myTable,#myTable2 {
                   <input type="text" class="form-control dd_user_input " id="dest" name="Destination_station_code" placeholder="Destination Station" >
                 </div>
                 <div class="col-xs-9 col-sm-6 form-group">
-                  <input type="date" class="form-control dd_user_input " id="date" name="date" placeholder="mm/dd/yyyy" >
+                  <input type="text" class="form-control dd_user_input " id="date" name="date" placeholder="dd-mm-yyyy" >
                 </div>
                 <!--
                 <div class="col-sm-5 form-group">
@@ -87,22 +87,7 @@ table#myTable,#myTable2 {
 
 
 
-<!-- Include Date Range Picker -->
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/js/bootstrap-datepicker.min.js"></script>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/css/bootstrap-datepicker3.css"/>
 
-<script>
-    $(document).ready(function(){
-        var date_input=$('input[name="date"]'); //our date input has the name "date"
-        var container=$('.bootstrap-iso form').length>0 ? $('.bootstrap-iso form').parent() : "body";
-        date_input.datepicker({
-            format: 'dd-mm-yyyy',
-            container: container,
-            todayHighlight: true,
-            autoclose: true,
-        })
-    })
-</script>
 
 <script src="{% static 'Seat_Availability/js/seatAvailable.js' %}"></script>
 
