--- a/Train_Fair_Enquiry/templates/Train_Fair_Enquiry/trainFairEnquiry.html
+++ b/Train_Fair_Enquiry/templates/Train_Fair_Enquiry/trainFairEnquiry.html
@@ -36,10 +36,10 @@ table#myTable,#myTable2 {
               <input type="text" class="form-control dd_user_input " id="dest" name="Destination_station_code" placeholder="Destination Station" >
             </div>
             <div class="col-xs-6 col-sm-3 form-group">
-              <input type="date" class="form-control dd_user_input " id="date" name="date" placeholder="dd/mm/yyyy" >
+              <input type="text" class="form-control dd_user_input " id="date" name="date" placeholder="dd-mm-yyyy" >
             </div>
             <div class="col-xs-3 col-sm-3 form-group">
-              <input type="date" class="form-control dd_user_input " id="Passenger_Age" name="Passenger_Age" placeholder="Passenger Age" >
+              <input type="text" class="form-control dd_user_input " id="Passenger_Age" name="Passenger_Age" placeholder="Passenger Age" >
             </div>
 
             <div class="col-xs-6 col-sm-4 form-group">
@@ -77,23 +77,6 @@ table#myTable,#myTable2 {
 
 
 
-
-<!-- Include Date Range Picker -->
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/js/bootstrap-datepicker.min.js"></script>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/css/bootstrap-datepicker3.css"/>
-
-<script>
-    $(document).ready(function(){
-        var date_input=$('input[name="date"]'); //our date input has the name "date"
-        var container=$('.bootstrap-iso form').length>0 ? $('.bootstrap-iso form').parent() : "body";
-        date_input.datepicker({
-            format: 'dd-mm-yyyy',
-            container: container,
-            todayHighlight: true,
-            autoclose: true,
-        })
-    })
-</script>
 
 <script src="{% static 'Train_Fair_Enquiry/js/trainFair.js' %}"></script>
 
