--- a/userpanal/templates/userpanal/station_file_link.html
+++ b/userpanal/templates/userpanal/station_file_link.html
@@ -8,10 +8,26 @@
 <!--<script type="text/javascript" src="http://railwayapi.com/jquery-ui-1.8.2.custom.min.js"></script>-->
 <script src="{% static 'userpanal/js/jquery_custom_min.js' %}"></script>
 
-<!--<link rel="stylesheet" href="http://code.jquery.com/ui/1.12.1/themes/start/jquery-ui.css">-->
+<!--<link rel="stylesheet" href="http://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">-->
 <link rel="stylesheet" type="text/css" href="{% static 'userpanal/themes_start_jquery.css' %}" />
 
 <!--<script type="text/javascript" src="http://railwayapi.com/autocomplete.js"></script>-->
 <script src="{% static 'userpanal/js/railwayapi_autocomplete.js' %}"></script>
 
 <link rel="stylesheet" type="text/css" href="{% static 'userpanal/autocomplete.css' %}" />
+
+
+
+
+
+<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+<script>
+$( function() {
+$( "#date" ).datepicker({
+    minDate: 0,
+    maxDate: "+0M +120D",
+    dateFormat: 'dd-mm-yy',
+});
+} );
+</script>
